// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateInput > should match the snapshot - autoSelectNext 1`] = `
<div
  aria-labelledby="dateinput_:r8:--label"
  class="nhsuk-date-input"
  data-testid="date-input"
  id="dateinput_:r8:"
>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r8:-day"
        id="dateinput_:r8:-day--label"
      >
        Day
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        data-testid="date-day"
        id="dateinput_:r8:-day"
        name="dateinput_:r8:-day"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r8:-month"
        id="dateinput_:r8:-month--label"
      >
        Month
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        data-testid="date-month"
        id="dateinput_:r8:-month"
        name="dateinput_:r8:-month"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r8:-year"
        id="dateinput_:r8:-year--label"
      >
        Year
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4"
        data-testid="date-year"
        id="dateinput_:r8:-year"
        name="dateinput_:r8:-year"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateInput > should match the snapshot - hint, error 1`] = `
<div
  aria-labelledby="dateinput_:r1:--label"
  class="nhsuk-date-input"
  data-testid="date-input"
  id="dateinput_:r1:"
>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r1:-day"
        id="dateinput_:r1:-day--label"
      >
        Day
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        id="dateinput_:r1:-day"
        name="dateinput_:r1:-day"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r1:-month"
        id="dateinput_:r1:-month--label"
      >
        Month
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        id="dateinput_:r1:-month"
        name="dateinput_:r1:-month"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r1:-year"
        id="dateinput_:r1:-year--label"
      >
        Year
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4"
        id="dateinput_:r1:-year"
        name="dateinput_:r1:-year"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateInput > should match the snapshot - onChange 1`] = `
<div
  aria-labelledby="dateinput_:ra:--label"
  class="nhsuk-date-input"
  data-testid="date-input"
  id="dateinput_:ra:"
>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:ra:-day"
        id="dateinput_:ra:-day--label"
      >
        Day
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        data-testid="date-day"
        id="dateinput_:ra:-day"
        name="dateinput_:ra:-day"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:ra:-month"
        id="dateinput_:ra:-month--label"
      >
        Month
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        data-testid="date-month"
        id="dateinput_:ra:-month"
        name="dateinput_:ra:-month"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:ra:-year"
        id="dateinput_:ra:-year--label"
      >
        Year
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4"
        data-testid="date-year"
        id="dateinput_:ra:-year"
        name="dateinput_:ra:-year"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateInput > should match the snapshot - type value 1`] = `
<div
  aria-labelledby="dateinput_:r9:--label"
  class="nhsuk-date-input"
  data-testid="date-input"
  id="dateinput_:r9:"
>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r9:-day"
        id="dateinput_:r9:-day--label"
      >
        Day
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        data-testid="date-day"
        id="dateinput_:r9:-day"
        name="dateinput_:r9:-day"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r9:-month"
        id="dateinput_:r9:-month--label"
      >
        Month
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        data-testid="date-month"
        id="dateinput_:r9:-month"
        name="dateinput_:r9:-month"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r9:-year"
        id="dateinput_:r9:-year--label"
      >
        Year
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4"
        data-testid="date-year"
        id="dateinput_:r9:-year"
        name="dateinput_:r9:-year"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateInput > should match the snapshot 1`] = `
<div
  aria-labelledby="dateinput_:r0:--label"
  class="nhsuk-date-input"
  data-testid="date-input"
  id="dateinput_:r0:"
>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r0:-day"
        id="dateinput_:r0:-day--label"
      >
        Day
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        id="dateinput_:r0:-day"
        name="dateinput_:r0:-day"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r0:-month"
        id="dateinput_:r0:-month--label"
      >
        Month
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2"
        id="dateinput_:r0:-month"
        name="dateinput_:r0:-month"
        value=""
      />
    </div>
  </div>
  <div
    class="nhsuk-date-input__item"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-date-input__label"
        for="dateinput_:r0:-year"
        id="dateinput_:r0:-year--label"
      >
        Year
      </label>
      <input
        class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4"
        id="dateinput_:r0:-year"
        name="dateinput_:r0:-year"
        value=""
      />
    </div>
  </div>
</div>
`;
